chore: Add additional margin to MainPage.xaml

--- a/UI/SKCanvasElementShowcase/SKCanvasElementShowcase/Presentation/MainPage.xaml
+++ b/UI/SKCanvasElementShowcase/SKCanvasElementShowcase/Presentation/MainPage.xaml
@@ -4,7 +4,8 @@
       xmlns:utu="using:Uno.Toolkit.UI"
       NavigationCacheMode="Required"
       Background="{ThemeResource BackgroundBrush}">
-    <Grid utu:SafeArea.Insets="VisibleBounds">
+    <Grid utu:SafeArea.Insets="VisibleBounds"
+          Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
